--- a/css/style.scss
+++ b/css/style.scss
@@ -1,2 +1,173 @@
-@import url(../resourse/normaliz-style-min.css);
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Lexend+Deca&display=swap");
+@import url(../resourse/normaliz-style.css);
 @import url(../resourse/fem-footer-style.css);
+
+// # Front-end Style Guide
+// ## Layout
+// The designs were created to the following widths:
+// - Mobile: 375px
+// - Desktop: 1440px
+
+// ## Colors
+// ### Primary
+// (main background)
+$Very-dark-blue: hsl(233, 47%, 7%);
+// (card background)
+$Dark-desaturated-blue: hsl(244, 38%, 16%);
+// (accent)
+$Soft-violet: hsl(277, 64%, 61%);
+
+// ### Neutral
+// (main heading, stats)
+$White: hsl(0, 0%, 100%);
+// (main paragraph)
+$Slightly-transparent-paragraph: hsla(0, 0%, 100%, 0.75);
+// (stat headings)
+$Slightly-transparent-headings: hsla(0, 0%, 100%, 0.6);
+
+// ## Typography
+$body-font-size: 15px;
+$title-font-size: 36px;
+$w400: 400;
+$w700: 700;
+
+// ### Font
+$font-Inter: "Inter", sans-serif;
+$font-LexendDeca: "Lexend Deca", sans-serif;
+
+// variables
+$card-width: 1110px;
+$card-height: 450px;
+$m-bottom: 30px;
+
+// ### main styles
+body {
+	background-color: $Very-dark-blue;
+	font-family: $font-Inter;
+	color: $Slightly-transparent-paragraph;
+	font-size: $body-font-size;
+	font-weight: $w400;
+}
+
+.conteiner {
+	width: 100%;
+	height: 100vh;
+}
+
+.flex {
+	display: flex;
+}
+
+.justify {
+	justify-content: center;
+	align-items: center;
+}
+
+.egg-justify {
+	justify-content: space-between;
+	align-items: center;
+}
+
+.flex-wrap {
+	flex-wrap: nowrap;
+
+	@media (max-width: 768px) {
+		flex-wrap: wrap-reverse;
+	}
+}
+
+// card content style
+.card {
+	width: $card-width;
+	min-height: $card-height;
+	background-color: $Dark-desaturated-blue;
+	border-radius: 15px;
+	overflow: hidden;
+	margin: 0 20px;
+
+	@media (max-width: 768px) {
+		height: auto;
+		// margin-top: 50px;
+	}
+}
+.card__content {
+	width: $card-width/2;
+	min-height: $card-height;
+	padding: 60px 70px 40px;
+
+	@media (max-width: 768px) {
+		width: 100%;
+	}
+
+	@media (max-width: 576px) {
+		text-align: center;
+	}
+}
+
+.card__content_header {
+	font-family: $font-LexendDeca;
+	font-size: $title-font-size;
+	font-weight: $w700;
+	color: $White;
+	line-height: 1.5em;
+	margin-bottom: $m-bottom;
+}
+
+.text-violet {
+	color: $Soft-violet;
+}
+
+.card__content_description {
+	line-height: 1.5em;
+	font-weight: $w400;
+	font-size: $body-font-size + 3px;
+	letter-spacing: 1px;
+	margin-bottom: $m-bottom * 1.5;
+}
+
+.card__content_egg {
+	margin-right: $m-bottom;
+
+	@media (max-width: 576px) {
+		flex-wrap: wrap;
+		margin-right: auto;
+	}
+}
+
+.egg_item {
+	& h3 {
+		font-family: $font-LexendDeca;
+		font-size: $title-font-size - 10px;
+		color: $White;
+		margin-bottom: $m-bottom - 15px;
+	}
+
+	& p {
+		text-transform: uppercase;
+		color: $Slightly-transparent-headings;
+	}
+
+	@media (max-width: 576px) {
+		width: 100%;
+		margin-bottom: $m-bottom;
+	}
+}
+
+// card image style
+.card__picture {
+	width: $card-width/2;
+	min-height: $card-height;
+	background-color: $Soft-violet;
+	opacity: 0.65;
+
+	& img {
+		width: 100%;
+		height: 100%;
+		object-fit: cover;
+		opacity: 0.45;
+	}
+
+	@media (max-width: 768px) {
+		width: 100%;
+	}
+}
