--- a/css/style.scss
+++ b/css/style.scss
@@ -158,13 +158,14 @@ body {
 	width: $card-width/2;
 	min-height: $card-height;
 	background-color: $Soft-violet;
-	opacity: 0.65;
+	// opacity: 0.65;
 
 	& img {
 		width: 100%;
 		height: 100%;
 		object-fit: cover;
-		opacity: 0.45;
+		// opacity: 0.45;
+		mix-blend-mode: multiply;
 	}
 
 	@media (max-width: 768px) {
